# ml_production_taxi

./: .env  .gitignore  README.md  create_simple_model.py  docker-compose.yml  pyproject.toml  structure.txt
models/: registry.json
models/versions/v1/: metrics.json  model.pkl
models/versions/v20260204_134751/: metrics.json  model.pkl
models/versions/v20260205115342/: metrics.json  model.pkl
models/versions/v20260205121526/: metrics.json  model.pkl
models/versions/v20260205185031/: metrics.json  model.pkl
models/versions/v20260205202620/: metrics.json
src/common/: config.py  logger.py  preprocessing.py  schemas.py
src/inference/: Dockerfile  app.py  model_loader.py  predictor.py
src/training/: Dockerfile  deployer.py  train.py  validator.py
tools/: predict_new_data.py
