[project]
name = "ml-mvp-taxi"
version = "0.4.1"
description = "NYC Taxi Duration Prediction MLOps Pipeline (Etap 4)"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0", 
    "pandas==2.1.4",
    "catboost==1.2.5",
    "scikit-learn==1.3.2",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "joblib==1.3.2",
    "loguru==0.7.2",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]



